k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: banking-backend
  labels:
    app: banking-backend
    deployment: banking-backend
    app.kubernetes.io/name: banking-backend
    app.kubernetes.io/component: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: banking-backend
      deployment: banking-backend
  template:
    metadata:
      labels:
        app: banking-backend
        deployment: banking-backend
        app.kubernetes.io/name: banking-backend
        app.kubernetes.io/component: backend
    spec:
      containers:
        - name: banking-backend
          image: daniyaalabbas/banking-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 256Mi
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 15
            timeoutSeconds: 2
            failureThreshold: 3
