k8s/db-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-backend-to-db
  labels:
    app: banking-db
spec:
  podSelector:
    matchLabels:
      app: banking-db
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: banking-backend
      ports:
        - protocol: TCP
          port: 5432
